--- a/CS/DataGridShowDeleteConfirmation/DataGridShowDeleteConfirmation.csproj
+++ b/CS/DataGridShowDeleteConfirmation/DataGridShowDeleteConfirmation.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DevExpress.Blazor" Version="19.2.1-beta" />
+    <PackageReference Include="DevExpress.Blazor" Version="19.2.4" />
   </ItemGroup>
 
 </Project>
