--- a/CS/DataGridShowDeleteConfirmation/DataGridShowDeleteConfirmation.csproj
+++ b/CS/DataGridShowDeleteConfirmation/DataGridShowDeleteConfirmation.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <LangVersion>7.3</LangVersion>
   </PropertyGroup>
   <ItemGroup>
