--- a/CS/DataGridShowDeleteConfirmation/DataGridShowDeleteConfirmation.csproj
+++ b/CS/DataGridShowDeleteConfirmation/DataGridShowDeleteConfirmation.csproj
@@ -1,13 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    
-    <Nullable>enable</Nullable><ImplicitUsings>enable</ImplicitUsings>
+    <TargetFramework>net5.0</TargetFramework>
     
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="DevExpress.Blazor" Version="22.1.2-beta" />
+    <PackageReference Include="DevExpress.Blazor" Version="21.2.10-pre-22207" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="wwwroot\images\" />
