--- a/CS/DataGridShowDeleteConfirmation/DataGridShowDeleteConfirmation.csproj
+++ b/CS/DataGridShowDeleteConfirmation/DataGridShowDeleteConfirmation.csproj
@@ -1,11 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
+    
+    <Nullable>enable</Nullable><ImplicitUsings>enable</ImplicitUsings>
     
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="DevExpress.Blazor" Version="21.2.10-pre-22207" />
+    <PackageReference Include="DevExpress.Blazor" Version="22.1.4" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="wwwroot\images\" />
